--- a/TimeSheetApp/EditForm.xaml
+++ b/TimeSheetApp/EditForm.xaml
@@ -8,14 +8,17 @@
         xmlns:mvvm="http://www.galasoft.ch/mvvmlight"
         xmlns:local="clr-namespace:TimeSheetApp"
         mc:Ignorable="d"
-        Title="EditActivity" Height="450" Width="800"
+        Title="EditActivity" Height="550" Width="800"
         DataContext="{Binding Main, Source={StaticResource Locator}}"
         Loaded="Window_Loaded"
         >
+    <Window.Resources>
+        <local:InvertBooleanToVisibilityConverter x:Key="InvertBoolean"/>
+    </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition Width="0.5*"/>
+            <ColumnDefinition Width="10*"/>
+            <ColumnDefinition Width="6*"/>
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="0">
             <Grid.RowDefinitions>
@@ -31,21 +34,21 @@
         </Grid>
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition Height="100"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="5*"/>
             </Grid.RowDefinitions>
             <Label Margin="5,0,0,0" Content="Процесс:" Grid.Row="0"/>
             <Label Margin="5,0,0,0" Content="Бизнес подразделение:" Grid.Row="2"/>
@@ -56,21 +59,35 @@
             <Label Margin="5,0,0,0" Content="Риск:" Grid.Row="12"/>
             <ComboBox Name="ProcessList" Grid.Row="1" ItemsSource="{Binding Processes}" DisplayMemberPath="procName" SelectedItem="{Binding EditedRecord.Process}"/>
             <ComboBox Name="BusinessList" Grid.Row="3" ItemsSource="{Binding BusinessBlock}" DisplayMemberPath="BusinessBlockName" SelectedItem="{Binding EditedRecord.BusinessBlock}"/>
-            <ComboBox Name="supportList" Grid.Row="5" ItemsSource="{Binding NonBusinessBlock}" DisplayMemberPath="Name" SelectedItem="{Binding EditedRecord.Supports}"/>
+            <ComboBox Name="supportList" Grid.Row="5" ItemsSource="{Binding SupportsArr}" DisplayMemberPath="Name" SelectedItem="{Binding EditedRecord.Supports}"/>
             <ComboBox Name="ClientWaysList" Grid.Row="7" ItemsSource="{Binding ClientWays}" DisplayMemberPath="Name" SelectedItem="{Binding EditedRecord.ClientWays}"/>
             <ComboBox Name="EscalationList" Grid.Row="9" ItemsSource="{Binding Escalations}" DisplayMemberPath="Name" SelectedItem="{Binding EditedRecord.Escalations}"/>
             <ComboBox Name="FormatList" Grid.Row="11" ItemsSource="{Binding FormatList}" DisplayMemberPath="Name" SelectedItem="{Binding EditedRecord.Formats}"/>
             <ComboBox Name="RiskList" Grid.Row="13" ItemsSource="{Binding RiskCol}" DisplayMemberPath="riskName" />
             <StackPanel Orientation="Vertical" Grid.Row="14" VerticalAlignment="Center">
-                <DatePicker Name="EditDatePicker" Width="150" SelectedDateChanged="EditDatePicker_SelectedDateChanged"/>
+                <DatePicker Name="EditDatePicker" Width="150" SelectedDateChanged="EditDatePicker_SelectedDateChanged" Margin="0,10,0,10"/>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                     <Label Content="Start" FontSize="16" VerticalAlignment="Center"/>
-                    <xctk:TimePicker Name="EditTimeStart" Value="{Binding EditedRecord.timeStart}" Margin="5,0,0,0" FontSize="16" TimeInterval="0:15:0"/>
+                    <xctk:TimePicker Name="EditTimeStart" Value="{Binding EditedRecord.timeStart}" Margin="5,0,0,0" FontSize="16" TimeInterval="0:15:0">
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="ValueChanged">
+                                <mvvm:EventToCommand Command="{Binding CheckTimeForIntersection}"/>
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </xctk:TimePicker>
                     <Label Content="End" FontSize="16" Margin="20,0,0,0" VerticalAlignment="Center"/>
-                    <xctk:TimePicker Name="EditTimeEnd" Value="{Binding EditedRecord.timeEnd}" FontSize="16" Margin="5,0,0,0" TimeInterval="0:15:0"/>
+                    <xctk:TimePicker Name="EditTimeEnd" Value="{Binding EditedRecord.timeEnd}" FontSize="16" Margin="5,0,0,0" TimeInterval="0:15:0">
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="ValueChanged">
+                                <mvvm:EventToCommand Command="{Binding CheckTimeForIntersection}"/>
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </xctk:TimePicker>
+                    
                 </StackPanel>
+                <TextBlock Text="Указанное время пересекается с другой записью" Visibility="{Binding IsTimeCorrect, Converter={StaticResource InvertBoolean}}" HorizontalAlignment="Center" Foreground="red"/>
                 <StackPanel  Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,10,0,0">
-                    <Button Name="OKBtn" Content="ОК" Width="100" Height="30" IsDefault="True" Click="OKBtn_Click"/>
+                    <Button Name="OKBtn" Content="ОК" Width="100" Height="30" IsDefault="True" Click="OKBtn_Click" IsEnabled="{Binding IsTimeCorrect}"/>
                     <Button Name="CancelBtn" Content="Отмена" Width="100" Margin="30,0,0,0" IsCancel="True"/>
                 </StackPanel>
             </StackPanel>
